--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\BackKeyListener.cs" />
      <Compile Include="Assets\Basket.cs" />
+     <Compile Include="Assets\BasketFail.cs" />
      <Compile Include="Assets\Model\Difficulty.cs" />
      <Compile Include="Assets\Model\Game.cs" />
      <Compile Include="Assets\OVR\Moonlight\Scripts\OVRDebugHeadController.cs" />
