Scripts folder added. Script files are moved inside this folder.

--- a/BasketVR.CSharp.csproj
+++ b/BasketVR.CSharp.csproj
@@ -58,18 +58,13 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\BackKeyListener.cs" />
+    <Compile Include="Assets\Model\Difficulty.cs" />
+    <Compile Include="Assets\Model\Game.cs" />
     <Compile Include="Assets\OVR\Moonlight\Scripts\OVRDebugHeadController.cs" />
     <Compile Include="Assets\OVR\Moonlight\Scripts\OVROverlay.cs" />
     <Compile Include="Assets\OVR\Moonlight\Scripts\OVRPlatformMenu.cs" />
@@ -96,7 +91,10 @@
     <Compile Include="Assets\OVR\Scripts\Util\OVRSceneSampleController.cs" />
     <Compile Include="Assets\OVR\Scripts\Util\OVRScreenFade.cs" />
     <Compile Include="Assets\OVR\Scripts\Util\OVRTrackerBounds.cs" />
-    <Compile Include="Assets\Shoot.cs" />
+    <Compile Include="Assets\Scripts\BackKeyListener.cs" />
+    <Compile Include="Assets\Scripts\Basket.cs" />
+    <Compile Include="Assets\Scripts\BasketFail.cs" />
+    <Compile Include="Assets\Scripts\Shoot.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\OVR\Moonlight\Resources\Unlit Transparent Color.shader" />
