Game menu added. Start and quit triggers added.

--- a/BasketVR.CSharp.csproj
+++ b/BasketVR.CSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Assets\Scripts\BackKeyListener.cs" />
     <Compile Include="Assets\Scripts\Basket.cs" />
     <Compile Include="Assets\Scripts\BasketFail.cs" />
+    <Compile Include="Assets\Scripts\MenuButtonListener.cs" />
     <Compile Include="Assets\Scripts\Shoot.cs" />
   </ItemGroup>
   <ItemGroup>
