--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,9 +45,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\BackKeyListener.cs" />
-     <Compile Include="Assets\Basket.cs" />
-     <Compile Include="Assets\BasketFail.cs" />
      <Compile Include="Assets\Model\Difficulty.cs" />
      <Compile Include="Assets\Model\Game.cs" />
      <Compile Include="Assets\OVR\Moonlight\Scripts\OVRDebugHeadController.cs" />
@@ -76,7 +73,12 @@
      <Compile Include="Assets\OVR\Scripts\Util\OVRSceneSampleController.cs" />
      <Compile Include="Assets\OVR\Scripts\Util\OVRScreenFade.cs" />
      <Compile Include="Assets\OVR\Scripts\Util\OVRTrackerBounds.cs" />
-     <Compile Include="Assets\Shoot.cs" />
+     <Compile Include="Assets\Scripts\BackKeyListener.cs" />
+     <Compile Include="Assets\Scripts\Basket.cs" />
+     <Compile Include="Assets\Scripts\BasketFail.cs" />
+     <Compile Include="Assets\Scripts\MenuButtonListener.cs" />
+     <Compile Include="Assets\Scripts\Shoot.cs" />
+     <Compile Include="Assets\Scripts\VRInputModule.cs" />
      <None Include="Assets\OVR\Moonlight\Shaders\OVRColorRampAlpha.shader" />
      <None Include="Assets\OVR\Moonlight\Shaders\Unlit Crosshair.shader" />
      <None Include="Assets\OVR\Moonlight\Resources\Unlit Transparent Color.shader" />
